--- a/src/fxml/MainSceneBuilder.fxml
+++ b/src/fxml/MainSceneBuilder.fxml
@@ -15,199 +15,180 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
-            prefWidth="1000.0" style="-fx-border-color: #0f9; -fx-border-width: 1; -fx-background-color: white;"
-            stylesheets="@../style/StyleBuilder.css" xmlns="http://javafx.com/javafx/10.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-border-color: #0f9; -fx-border-width: 1; -fx-background-color: white;" stylesheets="@../style/StyleBuilder.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
     <children>
-        <ImageView fitHeight="82.0" fitWidth="588.0" layoutX="420.0" layoutY="22.0" pickOnBounds="true"
-                   preserveRatio="true">
+        <ImageView fitHeight="82.0" fitWidth="588.0" layoutX="420.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@../icon/Detroit+Skyline+by+Kate+Zaremba+2014.png"/>
+                <Image url="@../icon/Detroit+Skyline+by+Kate+Zaremba+2014.png" />
             </image>
         </ImageView>
-        <TextField id="textFieldSearch" fx:id="search" layoutX="210.0" layoutY="63.0" prefHeight="33.0"
-                   prefWidth="210.0" promptText="Search" stylesheets="@../style/StyleBuilder.css"/>
-        <WebView fx:id="webView" layoutX="420.0" layoutY="99.0" prefHeight="599.0" prefWidth="579.0"/>
-        <VBox alignment="TOP_CENTER" prefHeight="700.0" prefWidth="210.0" styleClass="tab"
-              stylesheets="@../style/StyleBuilder.css">
+        <TextField id="textFieldSearch" fx:id="search" layoutX="210.0" layoutY="63.0" prefHeight="33.0" prefWidth="210.0" promptText="Search" stylesheets="@../style/StyleBuilder.css" />
+        <WebView fx:id="webView" layoutX="420.0" layoutY="99.0" prefHeight="599.0" prefWidth="579.0" />
+        <VBox alignment="TOP_CENTER" prefHeight="700.0" prefWidth="210.0" styleClass="tab" stylesheets="@../style/StyleBuilder.css">
             <children>
-                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="100.0" prefWidth="210.0"
-                        style="-fx-background-color: none;" text="Dictionary" textFill="WHITE">
+                <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="100.0" prefWidth="210.0" style="-fx-background-color: none;" text="Dictionary" textFill="WHITE">
                     <graphic>
                         <ImageView fitHeight="59.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../icon/icons8-books-52.png"/>
+                                <Image url="@../icon/icons8-books-52.png" />
                             </image>
                         </ImageView>
                     </graphic>
                     <font>
-                        <Font name="Segoe UI Bold Italic" size="20.0"/>
+                        <Font name="Segoe UI Bold Italic" size="20.0" />
                     </font>
                 </Button>
                 <AnchorPane prefHeight="557.0" prefWidth="210.0">
                     <children>
-                        <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="210.0" mnemonicParsing="false"
-                                onAction="#setWikiButton" prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab"
-                                stylesheets="@../style/StyleBuilder.css" text="Wiktionary" textFill="WHITE"
-                                AnchorPane.leftAnchor="5.0">
+                        <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="205.0" mnemonicParsing="false" onAction="#setWikiButton" prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Wiktionary" textFill="WHITE" AnchorPane.leftAnchor="5.0">
                             <graphic>
                                 <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../icon/icons8-wikipedia-52.png"/>
+                                        <Image url="@../icon/icons8-wikipedia-52.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
                             <font>
-                                <Font name="Segoe UI Bold" size="12.5"/>
+                                <Font name="Segoe UI Bold" size="12.5" />
                             </font>
                         </Button>
-                        <Button alignment="BASELINE_LEFT" layoutY="100.0" mnemonicParsing="false" onAction="#loadGoogle"
-                                prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab"
-                                stylesheets="@../style/StyleBuilder.css" text="Google Translate" textFill="WHITE"
-                                AnchorPane.leftAnchor="5.0">
+                        <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="150.0" mnemonicParsing="false" onAction="#loadGoogle" prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Google Translate" textFill="WHITE" AnchorPane.leftAnchor="5.0">
                             <graphic>
                                 <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../icon/icons8-google-translate-52.png"/>
+                                        <Image url="@../icon/icons8-google-translate-52.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
                             <font>
-                                <Font name="Segoe UI Bold" size="12.5"/>
+                                <Font name="Segoe UI Bold" size="12.5" />
                             </font>
                         </Button>
-                        <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#changeAv" prefHeight="50.0"
-                                prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css"
-                                text="English - Vietnamese" textFill="WHITE" AnchorPane.leftAnchor="5.0">
+                        <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#changeAv" prefHeight="50.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="English - Vietnamese" textFill="WHITE" AnchorPane.leftAnchor="5.0">
                             <graphic>
                                 <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../icon/icons8-book-52.png"/>
+                                        <Image url="@../icon/icons8-book-52.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
                             <font>
-                                <Font name="Segoe UI Bold" size="12.5"/>
+                                <Font name="Segoe UI Bold" size="12.5" />
                             </font>
                         </Button>
-                        <Button alignment="BASELINE_LEFT" layoutY="50.0" mnemonicParsing="false" onAction="#changeVa"
-                                prefHeight="50.0" prefWidth="200.0" styleClass="buttonTab"
-                                stylesheets="@../style/StyleBuilder.css" text="Vietnamese - English" textFill="WHITE"
-                                AnchorPane.leftAnchor="5.0">
+                        <Button alignment="BASELINE_LEFT" layoutY="50.0" mnemonicParsing="false" onAction="#changeVa" prefHeight="50.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Vietnamese - English" textFill="WHITE" AnchorPane.leftAnchor="5.0">
                             <graphic>
                                 <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../icon/icons8-book-52.png"/>
+                                        <Image url="@../icon/icons8-book-52.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
                             <font>
-                                <Font name="Segoe UI Bold" size="12.5"/>
+                                <Font name="Segoe UI Bold" size="12.5" />
                             </font>
                         </Button>
-                        <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="155.0" mnemonicParsing="false"
-                                onAction="#setLabanButton" prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab"
-                                stylesheets="@../style/StyleBuilder.css" text="Laban Dictionary" textFill="WHITE">
+                        <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="260.0" mnemonicParsing="false" onAction="#setLabanButton" prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Laban Dictionary" textFill="WHITE" AnchorPane.leftAnchor="5.0">
                             <graphic>
                                 <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../icon/laban.png"/>
+                                        <Image url="@../icon/laban.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
                             <font>
-                                <Font name="Segoe UI Bold" size="12.5"/>
+                                <Font name="Segoe UI Bold" size="12.5" />
                             </font>
                         </Button>
+                  <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="100.0" mnemonicParsing="false" onAction="#loadVerbs" prefHeight="50.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Động từ bất quy tắc" textFill="WHITE" AnchorPane.leftAnchor="5.0">
+                     <graphic>
+                        <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../icon/icons8-book-52.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font name="Segoe UI Bold" size="12.5" />
+                     </font>
+                  </Button>
                     </children>
                 </AnchorPane>
-                <Label fx:id="ClockDisplay" alignment="CENTER" prefHeight="18.0" prefWidth="210.0"
-                       stylesheets="@../style/StyleBuilder.css" text="time" textFill="WHITE">
+                <Label fx:id="ClockDisplay" alignment="CENTER" prefHeight="18.0" prefWidth="210.0" stylesheets="@../style/StyleBuilder.css" text="time" textFill="WHITE">
                     <font>
-                        <Font name="SansSerif Bold" size="12.0"/>
+                        <Font name="SansSerif Bold" size="12.0" />
                     </font>
                 </Label>
-                <Label fx:id="CalendarDisplay" alignment="CENTER" prefHeight="18.0" prefWidth="210.0"
-                       stylesheets="@../style/StyleBuilder.css" text="date" textFill="WHITE">
+                <Label fx:id="CalendarDisplay" alignment="CENTER" prefHeight="18.0" prefWidth="210.0" stylesheets="@../style/StyleBuilder.css" text="date" textFill="WHITE">
                     <font>
-                        <Font name="SansSerif Bold" size="12.0"/>
+                        <Font name="SansSerif Bold" size="12.0" />
                     </font>
                 </Label>
             </children>
         </VBox>
         <HBox alignment="BASELINE_RIGHT" layoutX="790.0" layoutY="63.0" prefHeight="33.0" prefWidth="210.0">
             <children>
-                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#speak" prefHeight="33.0" prefWidth="33.0"
-                           styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
+                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#speak" prefHeight="33.0" prefWidth="33.0" styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
                     <graphic>
                         <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../icon/icons8-speaker-52.png"/>
+                                <Image url="@../icon/icons8-speaker-52.png" />
                             </image>
                         </ImageView>
                     </graphic>
                     <HBox.margin>
-                        <Insets right="10.0"/>
+                        <Insets right="10.0" />
                     </HBox.margin>
                 </JFXButton>
-                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#addwordscene" prefHeight="33.0" prefWidth="33.0"
-                           styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
+                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#addwordscene" prefHeight="33.0" prefWidth="33.0" styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
                     <graphic>
                         <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../icon/icons8-add-list-26.png"/>
+                                <Image url="@../icon/icons8-add-list-26.png" />
                             </image>
                         </ImageView>
                     </graphic>
                     <HBox.margin>
-                        <Insets right="10.0"/>
+                        <Insets right="10.0" />
                     </HBox.margin>
                 </JFXButton>
-                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#editwordscene" prefHeight="33.0" prefWidth="33.0"
-                           styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
+                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#editwordscene" prefHeight="33.0" prefWidth="33.0" styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
                     <graphic>
                         <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../icon/icons8-edit-property-52.png"/>
+                                <Image url="@../icon/icons8-edit-property-52.png" />
                             </image>
                         </ImageView>
                     </graphic>
                     <HBox.margin>
-                        <Insets right="10.0"/>
+                        <Insets right="10.0" />
                     </HBox.margin>
                 </JFXButton>
-                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#removeWord" prefHeight="33.0" prefWidth="33.0"
-                           styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
+                <JFXButton contentDisplay="GRAPHIC_ONLY" onAction="#removeWord" prefHeight="33.0" prefWidth="33.0" styleClass="buttoneMenu" stylesheets="@../style/StyleBuilder.css">
                     <graphic>
                         <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../icon/icons8-trash-52.png"/>
+                                <Image url="@../icon/icons8-trash-52.png" />
                             </image>
                         </ImageView>
                     </graphic>
                     <HBox.margin>
-                        <Insets right="10.0"/>
+                        <Insets right="10.0" />
                     </HBox.margin>
                 </JFXButton>
             </children>
         </HBox>
-        <Button contentDisplay="GRAPHIC_ONLY" layoutX="387.0" layoutY="63.0" mnemonicParsing="false" onAction="#Submit"
-                prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: none; -fx-background-radius: 100;"
-                text="Button">
+        <Button contentDisplay="GRAPHIC_ONLY" layoutX="387.0" layoutY="63.0" mnemonicParsing="false" onAction="#Submit" prefHeight="33.0" prefWidth="33.0" style="-fx-background-color: none; -fx-background-radius: 100;" text="Button">
             <graphic>
-                <FontAwesomeIconView glyphName="SEARCH" size="18" styleClass="searchButton"/>
+                <FontAwesomeIconView glyphName="SEARCH" size="18" styleClass="searchButton" />
             </graphic>
         </Button>
-        <JFXListView fx:id="listView" layoutX="210.0" layoutY="100.0" prefHeight="598.0" prefWidth="210.0"
-                     styleClass="list-cell" stylesheets="@../style/StyleBuilder.css"/>
-        <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="970.0" layoutY="-2.0" onAction="#closeWindows"
-                   prefHeight="33.0" prefWidth="33.0" style="-fx-background-radius: 100;" styleClass="cancelButton"
-                   stylesheets="@../style/StyleBuilder.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+        <JFXListView fx:id="listView" layoutX="210.0" layoutY="100.0" prefHeight="598.0" prefWidth="210.0" styleClass="list-cell" stylesheets="@../style/StyleBuilder.css" />
+        <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="970.0" layoutY="-2.0" onAction="#closeWindows" prefHeight="33.0" prefWidth="33.0" style="-fx-background-radius: 100;" styleClass="cancelButton" stylesheets="@../style/StyleBuilder.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
             <graphic>
                 <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../icon/icons8-cancel-26.png"/>
+                        <Image url="@../icon/icons8-cancel-26.png" />
                     </image>
                 </ImageView>
             </graphic>
