--- a/src/fxml/MainSceneBuilder.fxml
+++ b/src/fxml/MainSceneBuilder.fxml
@@ -30,7 +30,59 @@
                     <graphic>
                         <ImageView fitHeight="59.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-     
+                                <Image url="@../icon/icons8-books-52.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <font>
+                        <Font name="Segoe UI Bold Italic" size="20.0" />
+                    </font>
+                </Button>
+                <AnchorPane prefHeight="557.0" prefWidth="210.0">
+                    <children>
+                        <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="205.0" mnemonicParsing="false" onAction="#setWikiButton" prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Wiktionary" textFill="WHITE" AnchorPane.leftAnchor="5.0">
+                            <graphic>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../icon/icons8-wikipedia-52.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <font>
+                                <Font name="Segoe UI Bold" size="12.5" />
+                            </font>
+                        </Button>
+                        <Button alignment="BASELINE_LEFT" layoutX="5.0" layoutY="150.0" mnemonicParsing="false" onAction="#loadGoogle" prefHeight="55.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Google Translate" textFill="WHITE" AnchorPane.leftAnchor="5.0">
+                            <graphic>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../icon/icons8-google-translate-52.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <font>
+                                <Font name="Segoe UI Bold" size="12.5" />
+                            </font>
+                        </Button>
+                        <Button alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#changeAv" prefHeight="50.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="English - Vietnamese" textFill="WHITE" AnchorPane.leftAnchor="5.0">
+                            <graphic>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../icon/icons8-book-52.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <font>
+                                <Font name="Segoe UI Bold" size="12.5" />
+                            </font>
+                        </Button>
+                        <Button alignment="BASELINE_LEFT" layoutY="50.0" mnemonicParsing="false" onAction="#changeVa" prefHeight="50.0" prefWidth="200.0" styleClass="buttonTab" stylesheets="@../style/StyleBuilder.css" text="Vietnamese - English" textFill="WHITE" AnchorPane.leftAnchor="5.0">
+                            <graphic>
+                                <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../icon/icons8-book-52.png" />
+                                    </image>
+                                </ImageView>
                             </graphic>
                             <font>
                                 <Font name="Segoe UI Bold" size="12.5" />
