--- a/src/fxml/addword.fxml
+++ b/src/fxml/addword.fxml
@@ -15,7 +15,18 @@
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddController">
     <children>
         <Label alignment="CENTER" layoutX="268.0" layoutY="45.0" prefHeight="17.0" prefWidth="64.0" text="Definition">
-            <f0ff99" style="-fx-background-color: #efefef;" text="Add Word">
+            <font>
+                <Font name="System Bold" size="12.0"/>
+            </font>
+        </Label>
+        <HTMLEditor fx:id="def"
+                    htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;"
+                    layoutX="14.0" layoutY="69.0" prefHeight="379.0" prefWidth="571.0"
+                    style="-fx-background-color: transparent; -fx-border-color: #0f9;"/>
+        <JFXTextField fx:id="word" focusColor="#00ff99" layoutX="14.0" layoutY="14.0" prefHeight="25.0"
+                      prefWidth="571.0" promptText="New Word" unFocusColor="#00ff99"/>
+        <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="248.0" layoutY="449.0" onAction="#addWord" prefHeight="41.0"
+                   prefWidth="41.0" ripplerFill="#00ff99" style="-fx-background-color: #efefef;" text="Add Word">
             <graphic>
                 <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                     <image>
