--- a/Dictionary/fxml/verbsLoader.fxml
+++ b/Dictionary/fxml/verbsLoader.fxml
@@ -7,17 +7,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="500.0" prefWidth="600.0" style="-fx-background-color: white; -fx-border-color: #0ea; -fx-border-width: 5;" stylesheets="@../style/StyleBuilder.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VerbsController">
-   <children>
-      <JFXTreeTableView fx:id="treeTableView" layoutX="16.0" layoutY="14.0" prefHeight="425.0" prefWidth="568.0" style="-fx-background-color: white; -fx-border-color: #0f9;" />
-      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="280.0" layoutY="445.0" onAction="#home" prefHeight="41.0" prefWidth="41.0" ripplerFill="#00ff99" style="-fx-background-color: #efefef;" text="Add Word">
-         <graphic>
-            <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icon/icons8-home-26.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </JFXButton>
-   </children>
+<AnchorPane prefHeight="500.0" prefWidth="600.0"
+            style="-fx-background-color: white; -fx-border-color: #0ea; -fx-border-width: 5;"
+            stylesheets="@../style/StyleBuilder.css" xmlns="http://javafx.com/javafx/10.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.VerbsController">
+    <children>
+        <JFXTreeTableView fx:id="treeTableView" layoutX="16.0" layoutY="14.0" prefHeight="425.0" prefWidth="568.0"
+                          style="-fx-background-color: white; -fx-border-color: #0f9;"/>
+        <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="280.0" layoutY="445.0" onAction="#home" prefHeight="41.0"
+                   prefWidth="41.0" ripplerFill="#00ff99" style="-fx-background-color: #efefef;" text="Add Word">
+            <graphic>
+                <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../icon/icons8-home-26.png"/>
+                    </image>
+                </ImageView>
+            </graphic>
+        </JFXButton>
+    </children>
 </AnchorPane>
